[package]
name = "clearlinux"
version = "1.0.0"
edition = "2021"
description = "A beautiful Linux system cleaner CLI tool"
authors = ["ClearLinux"]

[[bin]]
name = "clearlinux"
path = "src/main.rs"

[dependencies]
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
sysinfo = "0.30"
humansize = "2.1"
ctrlc = "3.4"
